--- a/package.json
+++ b/package.json
@@ -20,12 +20,17 @@
     "axios": "^1.4.0",
     "class-variance-authority": "^0.6.0",
     "clsx": "^1.2.1",
+    "date-fns": "^2.30.0",
+    "encoding": "^0.1.13",
     "eslint": "8.41.0",
     "eslint-config-next": "13.4.4",
     "lucide-react": "^0.223.0",
+    "nanoid": "^4.0.2",
     "next": "^13.4.5-canary.6",
     "next-auth": "^4.22.1",
     "postcss": "8.4.24",
+    "pusher": "^5.1.3",
+    "pusher-js": "^8.0.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.44.2",
