--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-dom": "18.2.0",
     "react-hook-form": "^7.44.2",
     "react-hot-toast": "^2.4.1",
+    "react-loading-skeleton": "^3.3.1",
     "react-textarea-autosize": "^8.4.1",
     "save": "^2.9.0",
     "tailwind-merge": "^1.12.0",
